Setup Maven projects to compile `*.jar` libraries to `target-compiled` folder